force-app/main/default/objects/Service_Routing_Log__c/Service_Routing_Log__c.object-meta.xml
<CustomObject>
    <label>Service Routing Log</label>
    <pluralLabel>Service Routing Logs</pluralLabel>
    <nameField>
        <displayFormat>SRL-{0000}</displayFormat>
        <label>Routing Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>