force-app/main/default/objects/Service_Routing_Log__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <label>Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Routing Logs</relationshipLabel>
    <relationshipName>Agent_Routing_Logs</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>