force-app/main/default/objects/Service_Routing_Log__c/fields/Routing_Type__c.field-meta.xml
<CustomField>
    <fullName>Routing_Type__c</fullName>
    <label>Routing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Priority-based</fullName>
                <default>true</default>
                <label>Priority-based</label>
            </value>
            <value>
                <fullName>Region-based</fullName>
            </value>
            <value>
                <fullName>Product-based</fullName>
            </value>
            <value>
                <fullName>Skills-based</fullName>
            </value>
            <value>
                <fullName>Presence Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>